			       =================
				BOGOFILTER NEWS
			       =================

NOTE: More information on important changes for bogofilter updaters
is in the RELEASE.NOTES files.  Read them!!

0.92.6	2004-08-22

	* Revise "-QQ" output so it can be used (unchanged) in a
          config file.
	* Remove obsolete "--with-db" option from configure.ac

0.92.5	2004-08-20

	2004-08-17

	* Expanded discussion of long options in bogofilter's man page.
	* Merged files RELEASE.NOTES-0.1? into cumulative
	  RELEASE.NOTES file.
	* Removed files CHANGES-0.1? as they duplicate info in NEWS.

	2004-08-16

	* Added "-QQ" option to bogofilter to display extended
          parameter list.

	2004-08-15

	* Documentation update.  Sample configure commands now use
	  option --with-libdb-prefix rather than obsolete --with-db.
	* Added "--wordlist" to bogofilter's help output.
	* Minor clean-ups for bogofilter's help output.

	2004-08-10

	* Improve documentation of '-B' and '-y' options.
	* Validate dates used with '-y'.
	* Diagnose missing wordlist specification.

	2004-08-07

	* Cross reference man pages to one another.
	* OS/2 compatibility changes (contributed by Yuri Dario).
	* Removed obsolete test output files - degen.out,
          combined.out, and separate.out

0.92.4	2004-07-29

	* Warn on invalid options, rather than exit.

0.92.3	2004-07-27

	2004-07-19

	* Revise enums and regression tests for new format characters
	  %A, %I, %Q.

	* Strip bogogrep_static executable to reduce binary rpm size.

	2004-07-18

	* Remove initialize() function in bogoconfig.c and use
	  lexer_init() in lexer.c, which provides same functionality.

0.92.2	2004-07-11

	* Bugfix:  '%I' is now really the Message-ID,
	* Feature: '%Q' is now the queue ID

	2004-07-10

	* Use an explicit inputs/outputs directory list to avoid shipping test
	  files in those directories.

	2004-07-08

	* Miscellaneous cleanups, removed 'degen' code remainders.

	2004-07-07

	* Formatting character changes: