@@ -5,6 +5,13 @@
 NOTE: More information on important changes for bogofilter updaters
 is in the RELEASE.NOTES files.  Read them!!
 
+	2004-08-23
+	* Add -f and -F options to bogoutil (mnemonic: fix) to run data base
+	  recovery.
+	* Reimplement our own locking so that recovery and data base access
+	  don't collide and no two processes try running recovery at the same
+	  time.
+
 0.92.6	2004-08-22
 
 	* Revise "-QQ" output so it can be used (unchanged) in a
